--- a/app/static/medtech_style.css
+++ b/app/static/medtech_style.css
@@ -177,6 +177,12 @@ strong:hover {
     }
 }
 
+/* -------------------------------------------- LABORATORY TEST -------------------------------------------- */
+.upload_file {
+    position: relative;
+    border: none;
+}
+
 /* -------------------------------------------- PATIENT -------------------------------------------- */
 /* style here */
 
