--- a/app/templates/doctor/patient/labtest_request.html
+++ b/app/templates/doctor/patient/labtest_request.html
@@ -105,7 +105,7 @@
 
                     <div class="p_row rowTwo">
                         <div class="inputBox fullName">
-                            <input type="text" value="{{ patient[1] }} {{ patient[2] }} {{ patient[3] }}" disabled>
+                            <input type="text" value="{{ patient[1] }} {{ patient[3] }}" disabled>
                             <span>PATIENT NAME</span>
                         </div>
                     </div>
