--- a/app/static/base_style.css
+++ b/app/static/base_style.css
@@ -451,7 +451,6 @@ ul li p {
 }
 
 .btn-submit:active {
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); 
     transform: translateY(1px);
 }
 
@@ -465,6 +464,20 @@ ul li p {
     background-color: var(--blueA);
     width: 131px;
     font-size: 13px;
+}
+
+.btn-submit.clearance {
+    background-color: white;
+    outline: none;
+    border: none;
+    width: 35px;
+    height: 30px;
+    font-size: 15px;
+    font-weight: 900;
+}
+
+.btn-submit.clearance img {
+    width: 15px;
 }
 
 .btn-submit.file {
@@ -555,16 +568,28 @@ textarea {
     width: 960px;
     height: 200px;
     border: 1px solid var(--blueB);
-    border-radius: 10px;
-    resize: none;
+    resize: vertical;
     padding: 10px;
     font-size: 16px;
+    margin-top: -15px;
+    text-align: justify;
 }
 
 /* text area */
 textarea:focus {
-    box-shadow: 0 0 0.5rem 0 rgba(163, 213, 255, 1);
     outline: none;
+}
+
+textarea::-webkit-scrollbar {
+    width: 10px; 
+}
+
+textarea::-webkit-scrollbar-thumb {
+    background-color: var(--blueB); 
+}
+
+textarea::-webkit-scrollbar-track {
+    background-color: var(--blueC); 
 }
 
 /* -------------------------------------------- MODAL FOR SUCCESS AND ERROR MESSAGES -------------------------------------------- */
